--- a/templates/booking/new.html.twig
+++ b/templates/booking/new.html.twig
@@ -46,9 +46,15 @@
                     <div class="form-group">
                         {{ form_row(form.customername, {'attr': {'class': 'form-control', 'placeholder': 'Customer Name'}}) }}
                     </div>
-                    <div class="form-group">
-                        {{ form_row(form.rooms, {'attr': {'class': 'form-control', 'placeholder': 'Room', 'id': 'rooms'}}) }}
-                    </div>
+                    {# <div class="form-group">
+                    {{ form_row(form.rooms, {
+                        'attr': {
+                            'class': 'form-control',
+                            'id': 'rooms'
+                        },
+                        'data': room.name
+                    }) }}
+                </div> #}
                 </div>
             </div>
 
